--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3185,8 +3185,9 @@ form#user-login, form#user-pass {
   }
 }
 
-[data-pane="3203"],
- {
+[data-pane="3698"],
+[data-pane="3800"],
+[data-pane="3910"] {
   width: 100%;
   max-width: 350px;
   margin: auto;
