--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3830,6 +3830,16 @@ form#user-login, form#user-pass {
 
 .page-categories {
   #main-content .radix-burr-flipped {
+    @include breakpoint(400px) {
+      .main-display .view-content .views-row {
+        flex: 1 1 150px;
+        margin: 0.5em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+    }
     @include breakpoint(944px) {
       .col-md-8 {
         width: 66.66666666666666%;
@@ -3847,15 +3857,6 @@ form#user-login, form#user-pass {
         flex-flow: row wrap;
         align-items: stretch;
         justify-content: center;
-
-        .views-row {
-          flex: 1 1 150px;
-          margin: 0.5em;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-        }
       }
     }
   }
