--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3831,13 +3831,20 @@ form#user-login, form#user-pass {
 .page-categories {
   #main-content .radix-burr-flipped {
     @include breakpoint(400px) {
-      .main-display .view-content .views-row {
-        flex: 1 1 150px;
-        margin: 0.5em;
+      .main-display .view-content {
         display: flex;
+        flex-flow: row wrap;
+        align-items: stretch;
         justify-content: center;
-        align-items: center;
-        text-align: center;
+
+        .views-row {
+          flex: 1 1 150px;
+          margin: 0.5em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
       }
     }
     @include breakpoint(944px) {
@@ -3850,13 +3857,6 @@ form#user-login, form#user-pass {
         width: 33.33333333333333%;
         width: calc(100% / 3);
         float: left;
-      }
-
-      .main-display .view-content {
-        display: flex;
-        flex-flow: row wrap;
-        align-items: stretch;
-        justify-content: center;
       }
     }
   }
