--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -443,6 +443,29 @@ div#toolbar div.toolbar-shortcuts ul {
   }
 }
 
+.view-empty,
+.pane-views-empty {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+
+  @include breakpoint(944px) {
+    margin-top: 0.5rem;
+  }
+
+  p {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #008080;
+    clear: both;
+    border: 1px solid #CCCCCC;
+    padding: 1em;
+    display: inline-block;
+    width: 100%;
+  }
+}
+
 .vbo-views-form p,
 .view-empty p {
   text-align: center;
