--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2887,6 +2887,9 @@ form#user-login, form#user-pass {
   display: table; }
 
 /********** Articles, News, Press Release **********/
+.blog-type-page #page {
+  width: 90%; }
+
 .blog-type-page h1.page-title {
   width: 100%;
   text-align: center;
