Increase min width of view items on category views from 250px to 270px

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -3629,6 +3629,11 @@ form#user-login, form#user-pass {
         }
       }
     }
+    .main-display.pane-panopoly-taxonomy-panel-pane-3 {
+      .pane-content .views-row {
+        min-width: 270px;
+      }
+    }
 
     .views-field-view-node a {
         float: right;
