--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2867,6 +2867,11 @@ form#user-login, form#user-pass {
   max-width: 350px;
   margin: auto; }
 
+[data-pane="3690"],
+[data-pane="3792"],
+[data-pane="3902"] {
+  margin-bottom: 0; }
+
 .node-type-panopoly-faq .field-name-field-categories {
   margin-top: 1em;
   font-size: 0.9em;
@@ -3020,6 +3025,7 @@ form#user-login, form#user-pass {
         -ms-flex: 1 1 0px;
             flex: 1 1 0;
     margin: 0.5em;
+    margin-bottom: 0;
     min-width: 0;
     max-width: 100%;
     float: right;
