--- a/css/calendar_item.css
+++ b/css/calendar_item.css
@@ -1,6 +1,7 @@
 /********************/
 /***    MIXINS    ***/
 /********************/
+/* Fluid Typography */
 .node-calendar-item .column-main .column-wrapper {
   border: 1px solid #CCCCCC;
   padding: 10px;
