--- a/css/node_edit_forms.css
+++ b/css/node_edit_forms.css
@@ -1,6 +1,7 @@
 /********************/
 /***    MIXINS    ***/
 /********************/
+/* Fluid Typography */
 #node-edit #edit-entity-recur .form-item-entity-recur-rules-frequency,
 #node-edit #edit-entity-recur .form-item-entity-recur-rules-period,
 .page-node-edit #edit-entity-recur .form-item-entity-recur-rules-frequency,
