--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1,6 +1,7 @@
 /********************/
 /***    MIXINS    ***/
 /********************/
+/* Fluid Typography */
 /********************/
 /** Default Styles **/
 big {
@@ -34,30 +35,81 @@ fieldset {
   min-width: 0; }
 
 h1 {
-  font-size: 2em;
+  font-size: 24px;
   margin: .67em 0; }
+  @media screen and (min-width: 400px) {
+    h1 {
+      font-size: calc(24px + 8 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    h1 {
+      font-size: 32px; } }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 22px;
   margin: .75em 0; }
+  @media screen and (min-width: 400px) {
+    h2 {
+      font-size: calc(20px + 6 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    h2 {
+      font-size: 26px; } }
 
 h3 {
-  font-size: 1.17em;
+  font-size: 14px;
   margin: .83em 0; }
+  @media screen and (min-width: 400px) {
+    h3 {
+      font-size: calc(14px + 4 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    h3 {
+      font-size: 18px; } }
 
 h4 {
+  font-size: 12px;
   margin: 1.12em 0; }
+  @media screen and (min-width: 400px) {
+    h4 {
+      font-size: calc(14px + 2 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    h4 {
+      font-size: 16px; } }
 
 h5 {
-  font-size: .83em;
+  font-size: 10px;
   margin: 1.5em 0; }
+  @media screen and (min-width: 400px) {
+    h5 {
+      font-size: calc(10px + 4 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    h5 {
+      font-size: 14px; } }
 
 h6 {
-  font-size: .75em;
+  font-size: 9px;
   margin: 1.67em 0; }
+  @media screen and (min-width: 400px) {
+    h6 {
+      font-size: calc(9px + 3 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    h6 {
+      font-size: 12px; } }
 
-h1, h2, h3, h4,
-h5, h6, b,
+p {
+  font-size: 13px; }
+  @media screen and (min-width: 400px) {
+    p {
+      font-size: calc(13px + 5 * ((100vw - 400px) / 800)); } }
+  @media screen and (min-width: 1200px) {
+    p {
+      font-size: 18px; } }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+b,
 strong {
   font-weight: bolder;
   line-height: 1.2; }
@@ -97,7 +149,8 @@ sup {
 tt {
   font-family: monospace; }
 
-ol li, ul li {
+ol li,
+ul li {
   list-style: initial;
   margin-left: 40px; }
 
@@ -127,11 +180,14 @@ body.page-admin .region-footer .block,
 body.page-admin .region-footer table {
   border: 0px; }
 
-.help-page, div.comment, div.node {
+.help-page,
+div.comment,
+div.node {
   background: none;
   border: 0px; }
 
-div.comment, div.node {
+div.comment,
+div.node {
   background: none !important; }
 
 body.tao {
@@ -149,7 +205,8 @@ body.tao {
     display: inline-block;
     vertical-align: middle;
     margin-right: 5px; }
-    #branding .breadcrumb-link a, #branding .breadcrumb-link strong {
+    #branding .breadcrumb-link a,
+    #branding .breadcrumb-link strong {
       color: black;
       font-weight: normal;
       float: left;
@@ -478,7 +535,8 @@ ul.primary-tabs.links {
   ul.primary-tabs.links > li.active > a {
     text-shadow: black 0 1px 0; }
 
-ul.secondary-tabs.links:hover li, ul.secondary-tabs.links:hover li a {
+ul.secondary-tabs.links:hover li,
+ul.secondary-tabs.links:hover li a {
   float: none; }
 
 ul.secondary-tabs.links {
@@ -517,7 +575,8 @@ ul.links.pager > li,
 ul.primary-tabs.links > li {
   margin-left: 0; }
 
-ul.action-links > li, ul.action-links > li > a,
+ul.action-links > li,
+ul.action-links > li > a,
 ul.links.pager > li,
 ul.links.pager > li > a,
 ul.primary-tabs.links > li,
@@ -619,7 +678,9 @@ ul.rules-operations-add a {
     @media (min-width: 500px) {
       #block-tb-megamenu-main-menu .tb-megamenu-main-menu .btn-navbar {
         display: none; } }
-  #block-tb-megamenu-main-menu .tb-megamenu-main-menu .fa-navicon:before, #block-tb-megamenu-main-menu .tb-megamenu-main-menu .fa-reorder:before, #block-tb-megamenu-main-menu .tb-megamenu-main-menu .fa-bars:before {
+  #block-tb-megamenu-main-menu .tb-megamenu-main-menu .fa-navicon:before,
+  #block-tb-megamenu-main-menu .tb-megamenu-main-menu .fa-reorder:before,
+  #block-tb-megamenu-main-menu .tb-megamenu-main-menu .fa-bars:before {
     content: "\f0c9\ Menu";
     color: #333;
     font-size: 14px; }
@@ -728,12 +789,15 @@ ul.rules-operations-add a {
   #modalContent div.ctools-modal-content a.close span.ui-icon {
     display: none; }
 
-.ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text {
+.ui-button-icon-only .ui-button-text,
+.ui-button-icons-only .ui-button-text {
   display: none; }
 
-.mbp-folders ol, .mbp-folders ul {
+.mbp-folders ol,
+.mbp-folders ul {
   margin-left: 0; }
-  .mbp-folders ol li, .mbp-folders ul li {
+  .mbp-folders ol li,
+  .mbp-folders ul li {
     margin-left: 0; }
 
 .media-list-thumbnails .media-item.selected {
@@ -834,7 +898,8 @@ ul.field-collection-view-links {
 .field-type-datetime.field-widget-date-popup .form-item {
   display: block;
   overflow: hidden; }
-  .field-type-datetime.field-widget-date-popup .form-item label, .field-type-datetime.field-widget-date-popup .form-item input {
+  .field-type-datetime.field-widget-date-popup .form-item label,
+  .field-type-datetime.field-widget-date-popup .form-item input {
     display: inline-block; }
   .field-type-datetime.field-widget-date-popup .form-item label {
     margin-right: 5px; }
@@ -942,12 +1007,14 @@ label.panopoly-admin-hide-body-label-processed {
     .rubik-inline-field-descriptions .page-content .form-item .description p:last-child,
     .description p:last-child {
       margin-bottom: 0; }
-  .rubik-inline-field-descriptions .page-content .form-item .description ul, .rubik-inline-field-descriptions .page-content .form-item .description ol,
+  .rubik-inline-field-descriptions .page-content .form-item .description ul,
+  .rubik-inline-field-descriptions .page-content .form-item .description ol,
   .description ul,
   .description ol {
     margin: 0 2em;
     list-style: initial; }
-    .rubik-inline-field-descriptions .page-content .form-item .description ul li, .rubik-inline-field-descriptions .page-content .form-item .description ol li,
+    .rubik-inline-field-descriptions .page-content .form-item .description ul li,
+    .rubik-inline-field-descriptions .page-content .form-item .description ol li,
     .description ul li,
     .description ol li {
       margin: 0.25em 0;
@@ -978,7 +1045,7 @@ form .tabs {
   background: -webkit-gradient(linear, left top, left bottom, from(#7db9e8), to(#1e5799));
   background: linear-gradient(to bottom, #7db9e8 0%, #1e5799 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7db9e8', endColorstr='#1e5799', GradientType=0);
   /* IE6-9 */ }
 
 .ui-datepicker .ui-datepicker-title select {
@@ -991,7 +1058,8 @@ form .tabs {
 .ui-datepicker-current-day .ui-state-active {
   background: #7DB9E8; }
 
-.ui-state-default, .ui-widget-content .ui-state-default,
+.ui-state-default,
+.ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
   border: 1px solid transparent; }
 
@@ -1008,7 +1076,7 @@ form .tabs {
   background: -webkit-gradient(linear, left top, left bottom, from(#666666), to(#333333));
   background: linear-gradient(to bottom, #666666 0%, #333333 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#333333',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#333333', GradientType=0);
   /* IE6-9 */
   padding: 0 14px 0 24px; }
 
@@ -1023,7 +1091,8 @@ form .tabs {
   border: 0;
   margin: 0.25em 0; }
 
-#media-tabs-wrapper .ui-tabs-nav li, #media-tabs-wrapper .ui-tabs-nav li.ui-state-active {
+#media-tabs-wrapper .ui-tabs-nav li,
+#media-tabs-wrapper .ui-tabs-nav li.ui-state-active {
   padding: 0 0.5em;
   margin-top: -2px; }
 
@@ -1041,7 +1110,8 @@ form .tabs {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap; }
-  .form-item-path-alias label, .form-item-path-alias span {
+  .form-item-path-alias label,
+  .form-item-path-alias span {
     -webkit-box-flex: 0;
         -ms-flex: 0 auto;
             flex: 0 auto; }
@@ -1748,7 +1818,12 @@ td:not([class]) {
       margin-bottom: 0; } }
 
 @media (min-width: 0px) and (max-width: 767px) {
-  .form-item table, .form-item thead, .form-item th, .form-item tbody, .form-item tr, .form-item td {
+  .form-item table,
+  .form-item thead,
+  .form-item th,
+  .form-item tbody,
+  .form-item tr,
+  .form-item td {
     display: block; }
   .form-item td.field-multiple-drag {
     display: inline-block; }
@@ -2167,7 +2242,8 @@ div#panels-ipe-control-container {
 .breadcrumb-link a {
   color: #333; }
 
-.pager li.pager-current, .primary-tabs > li.active {
+.pager li.pager-current,
+.primary-tabs > li.active {
   background-color: grey; }
 
 .pane-node-links {
