--- a/css/maintenance.css
+++ b/css/maintenance.css
@@ -1,6 +1,7 @@
 /********************/
 /***    MIXINS    ***/
 /********************/
+/* Fluid Typography */
 /* Maintenance page styles */
 body.maintenance-page {
   width: 100vw;
